# etl-prontlifevalsa

./: .env.example  .gitignore  .user.yml  profiles.yml  pyproject.toml
src/: raw_ingest.py
valsa/: dbt_project.yml
valsa/macros/: capitalize_name.sql  extract_fhir_id.sql  generate_schema_name.sql  unescape_html.sql
valsa/models/marts/: _mart_models.yml  encaminhamentos.sql  lesoes_visita_enfermagem.sql  pressao_arterial.sql  qualidade_exame_fisico.sql  qualidade_exame_lab.sql  questionario_evento_adverso.sql  vacinas.sql
valsa/models/staging/: _sources.yml  stg_allergyintolerance.sql  stg_appointment.sql  stg_condition.sql  stg_condition_diagnosis.sql  stg_coverage.sql  stg_customcareplan.sql  stg_customcareplanaction.sql  stg_customepisodeofcare.sql  stg_customplandefinition.sql  stg_documentreference.sql  stg_encounter.sql  stg_familymemberhistory.sql  stg_healthinsurance.sql  stg_healthinsuranceplan.sql  stg_immunization.sql  stg_location.sql  stg_medication.sql  stg_medicationrequest.sql  stg_medicationstatement.sql  stg_nutritionorder.sql  stg_observation_complaint.sql  stg_observation_habits.sql  stg_observation_hpi.sql  stg_observation_imaging.sql  stg_observation_lab.sql  stg_observation_vital_signs.sql  stg_patient.sql  stg_practitioner.sql  stg_procedure.sql  stg_questionnaire.sql  stg_questionnaire_item.sql  stg_riskassessment.sql  stg_servicerequest.sql  userparameter_mandatory_fields.sql
valsa/models/staging/stg_questionarios/: stg_response_aps_doc_acolhimento_enfermagem.sql  stg_response_avaliacao_breve_risco_saude.sql  (+8 more)
