[project]
name = "etl-prontlifevalsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.19",
    "dbt-core>=1.11.11",
    "dbt-postgres>=1.10.0",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "sqlfluff>=4.2.2",
]
